--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://b1c1de50-2b1c-474e-957d-d21bed1c5e3e.preview.emergentagent.com
 WDS_SOCKET_PORT=443
