--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# TED System - Git Ignore Configuration
 
 # IDE and editors
 .idea/
